--- a/src/Rootlayout.css
+++ b/src/Rootlayout.css
@@ -80,3 +80,27 @@
 .bg-transparent::placeholder {
   color: white;
 }
+.footer-list {
+  list-style: none;
+}
+.footer-list-li {
+  position: relative;
+  display: inline-block;
+  margin-right: 100px;
+  cursor: pointer;
+}
+
+.footer-list-li::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  background-color: yellow;
+  transition: width 0.3s ease;
+}
+
+.footer-list-li:hover::after {
+  width: 100%;
+}
